# eduplatform_3

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
eduplatform/: manage.py
eduplatform/attachments/: wzór.docx
eduplatform/chat/: admin.py  apps.py  endpoints.py  models.py  serializers.py  tests.py  urls.py
eduplatform/chat/migrations/: 0001_initial.py  0002_add_user_to_chatroom.py  0003_update_name_chatmessage.py
eduplatform/eduplatform/: asgi.py  settings.py  urls.py  wsgi.py
eduplatform/mentorship/: admin.py  annotations.py  consts.py  endpoints.py  managers.py  mixins.py  models.py  serializers.py  tests.py  urls.py
eduplatform/mentorship/migrations/: 0001_create_user_model.py  0002_create_teacher_model.py  0003_create_student_model.py  0004_create_group_model.py  0005_create_site_user_model.py  0006_create_model_message.py
eduplatform/testing_system/: admin.py  endpoints.py  models.py  serializers.py  tests.py  urls.py
eduplatform/testing_system/migrations/: 0001_create_group_model.py  0002_create_course_model_testing_system.py  0003_create_topic_model.py  0004_create_article_model.py  0005_create_test_model.py  0006_create_question_model.py  0007_create_answer_model.py  0008_create_attempt_model.py  0009_create_add_DateTimeModelMixin_Course_Topic_Article_Test_Question_Answer_models.py  0010_create_recomendation_model.py  0011_create_recommendation_model.py  0012_create_test_access_model.py  0013_add_fields_test_and_course_article_model.py
